objects/SCP_Certa_GC__Update_Project_batch__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Descripci_n_Error__c</fullName>
        <label>Descripción Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Moneda__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monto_Mensual__c</fullName>
        <label>Monto Mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monto_uno__c</fullName>
        <label>Monto uno</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Plazo_contrato__c</fullName>
        <label>Plazo contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Servicio__c</fullName>
        <label>Servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__TMI_Pr__c</fullName>
        <label>TMI_Pr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__hayError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hayError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idOportunidad__c</fullName>
        <label>idOportunidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idProyecto__c</fullName>
        <label>idProyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idServicio__c</fullName>
        <label>idServicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Update Project batch</label>
    <nameField>
        <label>Nombre de Update Project batch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Update Projects batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>